--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -60,6 +60,7 @@ jobs:
           hugo \
             --buildDrafts --gc \
             --baseURL ${{ steps.pages.outputs.base_url }}
+          touch public/.nojekyll  # Add this line
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
